@@ -21,6 +21,7 @@
 - updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
 - updated: `F.modify`, handler contains a new argument `controller`
 - updated: `headers` argument in `controller.proxy` supports `flags: []` for REQEUST method
+- updated: `.filefs()` and `.filenosql()` supports `download` with `true` (`filename` will be read from NoSQL binary file)
 
 - fixed: error handling in dynamic schemas
 - fixed: CSS variables
